--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "v-owl-carousel": "^1.0.8"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
