--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.9.6",
+    "cookie-universal-nuxt": "^2.1.3",
     "nuxt": "^2.0.0",
     "v-owl-carousel": "^1.0.8"
   },
